# aptri-voice

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  run.bat  run.sh  setup.bat  setup.sh
aptri_voice/: __init__.py  __main__.py  _hotkey_darwin.py  _hotkey_win32.py  _injector_darwin.py  _injector_win32.py  _single_instance.py  app.py  hotkey.py  injector.py  recorder.py  transcriber.py
aptri_voice/transcribers/: __init__.py  base.py  factory.py  mlx.py  torch_hf.py
